[package]
name = "rand_chacha"
version = "0.4.0"
authors = ["The Rand Project Developers", "The Rust Project Developers", "The CryptoCorrosion Contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://docs.rs/rand_chacha"
homepage = "https://rust-random.github.io/book"
description = """
ChaCha random number generator
"""
keywords = ["random", "rng", "chacha"]
categories = ["algorithms", "no-std"]
edition = "2021"
rust-version = "1.56"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
rand_core = { path = "../rand_core" }
ppv-lite86 = { version = "0.2", default-features = false, features = ["simd"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
# Only to test serde1
serde_json = { path = "../../json" }

[features]
default = ["std"]
std = ["ppv-lite86/std", "rand_core/std"]
simd = [] # deprecated
serde1 = ["serde"]
